# Anomaly-detection-based-on-LSH-and-ML

./: README.md  joinPickles.py  kfold_CICIoMT_AUCscore.py  kfold_ICE_AUCscore.py  modelingCSV_WIFIMQTT_Categorical.py  modelingCSV_WIFIMQTT_GRIDSEARCH.py  modelingKfold_CSVs_ICE.py  modelingNEWtraintest_FPS_WIFIMQTT.py  modeling_FPs_ICE.py  modeling_FPs_WIFIMQTT_GRIDSEARCH.py  modeling_FPs_WIFIMQTT_categorical.py  modeling_FPs_pps_ICE.py  pyproject.toml
CICIoMT dataset/: modelingCSV_WIFIMQTT.py  modelingNEWtraintest_CSVWIFIMQTT.py  modeling_FPs_WIFIMQTT.py  modelingkFOLD_CSVWIFIMQTT.py  modelingkFOLD_FPs_WIFIMQTT.py
Files/: checkPKLs.py  joinPickles.py  joining_ICE.py
Fingerprints by LSH/: FPs_ICE.py  Fps.py  New_FPs.py
ICE dataset/: kfold_ICE_AUCscore.py  modelingCSV_ICE.py  modelingKfold_FPs_ICE.py  modeling_FPs_ICE_GRIDSEARCH.py  modeling_FPs_pps_ICE.py
